--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "@babel/runtime": "^7.18.6",
     "aws-sdk": "^2.1213.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ts-ebml": "^2.0.2"
   },
   "browserslist": [
     "> 0.25%, not dead"
