--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@babel/runtime": "^7.18.6",
     "aws-sdk": "^2.1213.0",
+    "buffer": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-ebml": "^2.0.2"
