--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@appquality/unguess-design-system": "^2.12.11",
     "@babel/runtime": "^7.18.6",
     "aws-sdk": "^2.1213.0",
     "react": "^18.2.0",
