--- a/package.json
+++ b/package.json
@@ -43,9 +43,14 @@
   "dependencies": {
     "@appquality/unguess-design-system": "^2.12.11",
     "@babel/runtime": "^7.18.6",
+    "@zendeskgarden/react-dropdowns": "^8.49.0",
+    "@zendeskgarden/react-forms": "^8.49.0",
+    "@zendeskgarden/react-theming": "^8.48.2",
     "aws-sdk": "^2.1213.0",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "styled-components": "^5.3.3",
     "ts-ebml": "^2.0.2"
   },
   "browserslist": [
