--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "style-loader": "^3.3.1",
     "styled-components": "^5.3.3",
     "ts-ebml": "^2.0.2"
   },
