--- a/static/manifest.json
+++ b/static/manifest.json
@@ -9,6 +9,10 @@
   },
   "content_scripts": [
     {
+      "matches": ["https://*/*", "http://*/*"],
+      "js": ["meta.js"]
+    },
+    {
       "matches": ["https://*/temporary/*", "http://*/temporary/*"],
       "js": ["blob.js"]
     }
