--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 WELCOME_PAGE=https://www.iterspace.com/welcome
 GOODBYE_PAGE=https://www.iterspace.com/goodbye
 
-TEMPORARY_PAGE=http://localhost:3000/temporary
+TEMPORARY_PAGE=https://www.iterspace.com/temporary
