feat: different .env in prod and dev

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 WELCOME_PAGE=https://www.iterspace.com/welcome
 GOODBYE_PAGE=https://www.iterspace.com/goodbye
 
-TEMPORARY_PAGE=https://www.iterspace.com/temporary
+TEMPORARY_PAGE=https://app.iterspace.com/temporary
